Fixing z-index of dropdown menu

--- a/styles/main.css
+++ b/styles/main.css
@@ -47,6 +47,8 @@ body {
     background-color: #191919;
     border-bottom: 1px solid rgba(255, 255, 255, 0.25);
     animation: 5s appear forwards;
+    position: relative;
+    z-index: 1990;
 }
 
 @media only screen and (max-width: 685px) {
